--- a/Assets/Scripts/Combat/Combat.asmdef
+++ b/Assets/Scripts/Combat/Combat.asmdef
@@ -3,7 +3,8 @@
     "references": [
         "GUID:a5832f072f485cb418f194e8ea5a90b9",
         "GUID:b0198d2af7a743e49a93790f61d6835a",
-        "GUID:a1fb562051a419a4aa9eae6cfaa17eaf"
+        "GUID:a1fb562051a419a4aa9eae6cfaa17eaf",
+        "GUID:e8dc84f929a547348b260720fb621904"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
