--- a/Assets/Scripts/Spells/Spells.asmdef
+++ b/Assets/Scripts/Spells/Spells.asmdef
@@ -1,10 +1,8 @@
 {
-    "name": "Player",
+    "name": "Spells",
     "references": [
-        "GUID:a5832f072f485cb418f194e8ea5a90b9",
-        "GUID:75469ad4d38634e559750d17036d5f7c",
         "GUID:a1fb562051a419a4aa9eae6cfaa17eaf",
-        "GUID:5e11336ebd727bf4e8d3107f58d997e3"
+        "GUID:e8dc84f929a547348b260720fb621904"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
